# otus_cpp

./: .gitignore  CMakeLists_8txt.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  print__lib_8hpp.html  print__lib_8hpp__incl.map  print__lib_8hpp__incl.md5  print__lib_8hpp_source.html
.github/workflows/: ci.yml  homework1.yml  homework2.yml  homework4.yml  homework5.yml  homework7.yml
01_homework/: CMakeLists.txt  lib.cpp  test.cpp
02_homework/: CMakeLists.txt  ip_filter.cpp  test.cpp
02_homework/ip_lib/: CMakeLists.txt  ip_lib.cpp  ip_lib.h
03_homework/: CMakeLists.txt  allocator_test.cpp  logging_allocator.cpp  my_allocator.cpp
03_homework/allocator_lib/: CMakeLists.txt  my_allocator.cpp
03_homework/my_vector_lib/: CMakeLists.txt  Makefile  my_vector.cpp
04_homework/: CMakeLists.txt  template_test.cpp
04_homework/print_lib/: CMakeLists.txt  Doxyfile  print_lib.hpp
05_homework/: CMakeLists.txt  main.cpp
05_homework/document_lib/: CMakeLists.txt  document.cpp  document.hpp
05_homework/engine_lib/: CMakeLists.txt  engine.cpp  engine.hpp
05_homework/figure_lib/: CMakeLists.txt  figure.cpp  figure.hpp
06_homework/: main.cpp
06_homework/matrix_lib/: matrix.hpp
07_homework/: CMakeLists.txt  bulk.cpp  command_executor.cpp  command_executor.h  execution_manager.cpp
07_homework/command_executor_lib/: CMakeLists.txt  command_executor.cpp  command_executor.h
07_homework/command_lib/: CMakeLists.txt  command.cpp  command.h
07_homework/execution_manager_lib/: CMakeLists.txt  execution_manager.cpp  execution_manager.h
07_homework/logger_lib/: CMakeLists.txt  logger.cpp  logger.h
homework1/: CMakeLists.txt  helloworld.cpp  main.cpp  test.cpp
search/: all_1.js  files_1.js  functions_0.js  searchdata.js
